# ptr-tidy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  escape.cpp  main.cpp  mpaper.cls  paper.bib  paper.cls  paper.tex  proposal.bib  proposal.cls  proposal.tex  ptr.cpp  ptr.ll
.github/workflows/: ci-paper.yaml  ci-proposal.yaml  ci.yaml  codeql.yaml
code/: capture-example.cpp  code-to-ast-summary.ll  code-to-ast.cpp  code-to-ast.ll  code-to-ast.txt  code-to-ir.ll  compile_commands.json  escape-example.cpp  first-example-unique.cpp  fix-leak.cpp  leak.cpp  manual-leak.cpp  prototype-input.cpp  prototype-output.txt  reference-cycle.cpp  tinyxml2-example.cpp
diagrams/: code-to-ast.drawio  design.drawio  llvm.drawio  memory.drawio
example/: ptr.cpp  ptr.ll
images/: code-to-ast.eps
src/: AstHandler.cpp  AstHandler.h  Callback.cpp  Callback.h  CaptureTracking.cpp  CaptureTracking.h  Helper.h  IrHandler.cpp  IrHandler.h  PtrRewriter.cpp  PtrRewriter.h  main.cpp
test/: CMakeLists.txt  testHelper.t.cpp  testIrHandler.t.cpp  testPtrRewriter.t.cpp
